Fixed scroll issues; main content visible when menu shown after main content scrolled and scrolling when menu shown shows main content

--- a/src/css/global/_common.scss
+++ b/src/css/global/_common.scss
@@ -1,4 +1,5 @@
 body {
+    background:yellow;
     height:100%;
     font-family: Arial, sans-serif;
     position: absolute;
@@ -6,19 +7,22 @@ body {
 }
 .container {
     height:100%;
+    overflow:hidden;
     position: absolute;
     width:100%;
 }
 main {
     background:white;
-    margin-top:0;
-    min-height:100%;
+    top:0;
+    height:100%;
     overflow:auto;
-    padding: 3em;
-    transition:margin 1s ease;
+    position: absolute;
+    transition:top 1s ease;
+    width:100%;
+    z-index:0;
 }
 section {
-    margin:0 0 2em;
+    margin:3em;
 }
 h1 {
     font-size:2.4em;
