--- a/src/css/global/_global-header.scss
+++ b/src/css/global/_global-header.scss
@@ -4,9 +4,9 @@
         text-align:center;
         top:0;
         width:100%;
+        z-index:1;
     }
     .global-nav {
-        background: yellow;
         min-height:100%;
         overflow:auto;
         padding: 3em;
