--- a/src/css/states/_menu-shown.scss
+++ b/src/css/states/_menu-shown.scss
@@ -6,6 +6,6 @@
         display:block;
     }
     main {
-        transition:margin-top 1s ease;
+        transition:top 1s ease;
     }
 }
